fix: #1298 default accordion Collapse product suggest

--- a/src/modules/sale/bill/bill.style.scss
+++ b/src/modules/sale/bill/bill.style.scss
@@ -128,6 +128,9 @@
     &__btn--icon{
         font-size: 24px  !important
     };
+    &__card{
+        overflow: hidden;
+    }
 };
 .table-searchProduct{
     & .ant-table-row{
